# tartan-vote

./: .env.example  .gitattributes  .gitignore  CODEOWNERS  Cargo.nix  Cargo.toml  README.md  design-proposal.html  devenv.nix  devenv.yaml  flake.nix  osv-scanner.toml  secretspec.toml
.forgejo/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
auth-service/: auth.mjs  package-lock.json  package.json  server.mjs
backend/: Cargo.nix  Cargo.toml
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/: enums.rs  event.rs  lib.rs  organization.rs  prelude.rs  session.rs  user.rs  user_session.rs  vote.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20260308_183617_create_users.rs  m20260310_000844_create_events.rs  m20260321_223131_create_votes.rs  m20260324_172033_create_sessions.rs  m20260325_032552_create_user_sessions.rs
backend/crates/voting-app/: Cargo.toml
backend/crates/voting-app-store/: Cargo.toml
backend/crates/voting-app-store/src/: events.rs  lib.rs  organization_members.rs  sessions.rs  user_sessions.rs  votes.rs
backend/crates/voting-app/src/: config.rs  main.rs  server.rs  static_event_reader.rs
backend/crates/voting-app/src/core/: cors.rs  error.rs  frontend.rs  mod.rs  openapi.rs
backend/crates/voting-app/src/core/auth/: middleware.rs  mod.rs  oidc.rs
backend/crates/voting-app/src/domain/: mod.rs
backend/crates/voting-app/src/domain/attendance/: handlers.rs
backend/crates/voting-app/src/domain/auth/: bypass.rs  handlers.rs  mod.rs
backend/crates/voting-app/src/domain/event/: handlers.rs
backend/crates/voting-app/src/domain/session/: export.rs  handlers.rs  mod.rs
backend/crates/voting-app/src/domain/votes/: handlers.rs
backend/crates/voting-app/src/event/: handler.rs
backend/crates/voting-app/src/vote/: handler.rs  state.rs
docs/: CONTRIBUTING.md  SETUP.md  secrets-and-config.md
docs/crates/voting-app/: auth.md  fonts.md
docs/db/: db-json.md  db-migration.md  db-schema.md
docs/frontend/: README.md  proxy-setup-debug.md
docs/process/: proxy-voting-implementation.md  proxy-voting-testing.md
frontend/: README.md  bun.nix  deno.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend-sveltekit/: .env.example  README.md  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend-sveltekit/src/: app.css  app.d.ts  app.html
frontend-sveltekit/src/lib/: api.ts  auth-client.ts  config.ts
frontend-sveltekit/src/lib/components/: ArrayEditor.svelte  Button.svelte  Chip.svelte  HostShell.svelte  Input.svelte  Logo.svelte  LongTextInput.svelte  Modal.svelte  MotionLiveResults.svelte  ProgressBar.svelte  SelectMenu.svelte  StatCard.svelte  TagPill.svelte  TimeScroller.svelte  VoteOption.svelte
frontend-sveltekit/src/lib/models/: Event.ts  User.ts  Vote.ts
frontend-sveltekit/src/lib/stores/: session.ts
frontend-sveltekit/src/routes/: +page.svelte
frontend-sveltekit/src/routes/join/: +page.svelte
frontend-sveltekit/src/routes/proxy-setup/: +page.svelte
frontend-sveltekit/src/routes/signin/: +page.svelte
frontend-sveltekit/src/routes/waiting/: +page.svelte
frontend/src/: App.svelte  app.css  app.d.ts
frontend/src/lib/: auth-client.ts
frontend/src/lib/api/: base.ts
frontend/src/lib/components/: arrayEditor.svelte  hoverCard.svelte  longTextInput.svelte  motionLiveResults.svelte  popup.svelte  selectMenu.svelte  timeScroller.svelte
frontend/src/lib/models/: Event.ts  User.ts  Vote.ts
frontend/src/screens/: Home.svelte  MotionRunningAdmin.svelte  ProxySetup.svelte  ResultsAdmin.svelte  ResultsVoter.svelte  SessionCreation.svelte  SignIn.svelte  VotingMotion.svelte  WaitingPage.svelte  authPage.svelte  joinPage.svelte  sessionCreation.svelte
nix/: deno-package.nix  sanitize-deno-cache.sh
old-frontend/: .oxlintrc.json  vite.config.ts
old-frontend/src/: App.svelte
old-frontend/src/lib/api/: base.ts  client.ts  schema.d.ts
old-frontend/src/lib/components/: motionLiveResults.svelte  popup.svelte  selectMenu.svelte
old-frontend/src/lib/models/: Event.ts
old-frontend/src/screens/: Home.svelte  MotionRunningAdmin.svelte  ProxySetup.svelte  SessionCreation.svelte  SignIn.svelte  VotingMotion.svelte  WaitingPage.svelte
(+4 files in other folders)
