[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[package]
name = "backend-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "backend-app"
path = "crates/voting-app/src/main.rs"

[dependencies]
axum = "0.8.8"
axum-oidc = "0.6.0"
chrono = "0.4.44"
dotenvy = "0.15.7"
entity = { version = "0.1.0", path = "crates/entity" }
http = "1.3.1"
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5.3"
tower-sessions = "0.14.0"
tracing = "0.1.44"
urlencoding = "2.1.3"
