[package]
name = "entity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = "5"
