[package]
name = "voting-app-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
entity = { version = "0.1.0", path = "../entity"}
sea-orm = { version = "=2.0.0-rc.37", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json"] }
