[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
axum-oidc = { git = "https://codeberg.org/pfzetto/axum-oidc", rev = "007135e2c26830f6c89d1659302c228076c7afa7" }
base64 = "0.22.1"
chrono = "0.4.44"
dotenvy = "0.15.7"
entity = { version = "0.1.0", path = "../entity" }
voting-app-store = { version = "0.1.0", path = "../voting-app-store" }
migration = { version = "0.1.0", path = "../migration" }
http = "1.3.1"
sea-orm = "2.0.0-rc.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
genpdf = "0.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.23.3", features = ["v4"] }
petname = "3"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
sentry = { version = "0.48.3", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "tracing", "reqwest", "rustls"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
sea-orm = { version = "2.0.0-rc.37", features = ["mock"] }
