[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
entity = { version = "0.1.0", path = "../entity" }
voting-app-store = { version = "0.1.0", path = "../voting-app-store" }
migration = { version = "0.1.0", path = "../migration" }
http = "1.3.1"
sea-orm = "2.0.0-rc.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
genpdf = "0.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
petname = "3"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
sentry = { version = "0.48.3", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "tracing", "reqwest", "rustls"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
sea-orm = { version = "2.0.0-rc.37", features = ["mock"] }
